--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,17 +83,20 @@ jobs:
     name: Code Quality Check - ${{ matrix.app }}
     runs-on: ubuntu-latest
     needs: detect-changes
-    if: |
-      (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
-      (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
     strategy:
       matrix:
         app: [backend, web]
     
     steps:
       - uses: actions/checkout@v4
+        if: |
+          (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
+          (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
       
       - name: Setup Node.js
+        if: |
+          (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
+          (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
@@ -102,19 +105,31 @@ jobs:
             ${{ matrix.app == 'web' && 'clients/web/package-lock.json' || 'backend/package-lock.json' }}
       
       - name: Install dependencies
+        if: |
+          (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
+          (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
         working-directory: ${{ matrix.app == 'web' && 'clients/web' || 'backend' }}
         run: npm ci
       
       - name: Run ESLint
+        if: |
+          (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
+          (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
         working-directory: ${{ matrix.app == 'web' && 'clients/web' || 'backend' }}
         run: npm run lint || true
         continue-on-error: true
       
       - name: TypeScript type check
+        if: |
+          (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
+          (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
         working-directory: ${{ matrix.app == 'web' && 'clients/web' || 'backend' }}
         run: npm run type-check || npx tsc --noEmit
       
       - name: Check for unused dependencies
+        if: |
+          (matrix.app == 'backend' && (needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch')) ||
+          (matrix.app == 'web' && (needs.detect-changes.outputs.web == 'true' || needs.detect-changes.outputs.ci == 'true' || github.event_name == 'workflow_dispatch'))
         working-directory: ${{ matrix.app == 'web' && 'clients/web' || 'backend' }}
         run: npx depcheck || true
         continue-on-error: true
@@ -123,17 +138,22 @@ jobs:
   security:
     runs-on: ubuntu-latest
     needs: detect-changes
-    # Run security checks if any code changed, or on manual trigger, or CI changes
-    if: |
-      needs.detect-changes.outputs.backend == 'true' || 
-      needs.detect-changes.outputs.web == 'true' || 
-      needs.detect-changes.outputs.mobile == 'true' || 
-      needs.detect-changes.outputs.ci == 'true' || 
-      github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
+        if: |
+          needs.detect-changes.outputs.backend == 'true' || 
+          needs.detect-changes.outputs.web == 'true' || 
+          needs.detect-changes.outputs.mobile == 'true' || 
+          needs.detect-changes.outputs.ci == 'true' || 
+          github.event_name == 'workflow_dispatch'
       
       - name: Run Trivy vulnerability scanner
+        if: |
+          needs.detect-changes.outputs.backend == 'true' || 
+          needs.detect-changes.outputs.web == 'true' || 
+          needs.detect-changes.outputs.mobile == 'true' || 
+          needs.detect-changes.outputs.ci == 'true' || 
+          github.event_name == 'workflow_dispatch'
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
@@ -142,9 +162,15 @@ jobs:
           output: 'trivy-results.sarif'
       
       - name: Upload Trivy results to GitHub Security
+        if: |
+          (needs.detect-changes.outputs.backend == 'true' || 
+           needs.detect-changes.outputs.web == 'true' || 
+           needs.detect-changes.outputs.mobile == 'true' || 
+           needs.detect-changes.outputs.ci == 'true' || 
+           github.event_name == 'workflow_dispatch') &&
+          (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
-        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         with:
           sarif_file: 'trivy-results.sarif'
       
@@ -177,12 +203,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: detect-changes
-    # Run tests if backend, web, or CI changes detected
-    if: |
-      needs.detect-changes.outputs.backend == 'true' || 
-      needs.detect-changes.outputs.web == 'true' || 
-      needs.detect-changes.outputs.ci == 'true' || 
-      github.event_name == 'workflow_dispatch'
     services:
       postgres:
         image: pgvector/pgvector:pg15
@@ -265,16 +285,19 @@ jobs:
     name: Mobile App Build & Test
     runs-on: ubuntu-latest
     needs: detect-changes
-    # Run mobile build and test only if mobile app changes detected
-    if: |
-      needs.detect-changes.outputs.mobile == 'true' || 
-      needs.detect-changes.outputs.ci == 'true' || 
-      github.event_name == 'workflow_dispatch'
     
     steps:
       - uses: actions/checkout@v4
+        if: |
+          needs.detect-changes.outputs.mobile == 'true' || 
+          needs.detect-changes.outputs.ci == 'true' || 
+          github.event_name == 'workflow_dispatch'
       
       - name: Setup Java JDK
+        if: |
+          needs.detect-changes.outputs.mobile == 'true' || 
+          needs.detect-changes.outputs.ci == 'true' || 
+          github.event_name == 'workflow_dispatch'
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -282,6 +305,10 @@ jobs:
           cache: 'gradle'
       
       - name: Setup Flutter
+        if: |
+          needs.detect-changes.outputs.mobile == 'true' || 
+          needs.detect-changes.outputs.ci == 'true' || 
+          github.event_name == 'workflow_dispatch'
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
@@ -407,14 +434,7 @@ jobs:
     name: Build & Push Docker Images
     runs-on: ubuntu-latest
     needs: [detect-changes]
-    # Build on main branch push or manual trigger, and only if backend/web changes detected
-    if: |
-      (github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch') &&
-      (needs.detect-changes.outputs.backend == 'true' || 
-       needs.detect-changes.outputs.web == 'true' || 
-       needs.detect-changes.outputs.docker == 'true' || 
-       needs.detect-changes.outputs.ci == 'true' || 
-       github.event_name == 'workflow_dispatch')
+    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     
     outputs:
       backend-image: ${{ steps.meta-backend.outputs.tags }}
