--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -22,9 +22,11 @@ on:
 permissions:
   contents: read
   actions: read
+  packages: write
 
 env:
   NODE_VERSION: '18'
+  REGISTRY: ghcr.io
 
 jobs:
   code-quality:
@@ -134,10 +136,66 @@ jobs:
           npx start-server-and-test 'npm start' 3000 'npx @axe-core/cli http://localhost:3000' || echo "Accessibility audit completed with warnings"
         continue-on-error: true
 
+  build-docker-image:
+    name: Build Web Docker Image
+    runs-on: ubuntu-latest
+    needs: [code-quality, test, accessibility]
+    outputs:
+      image: ${{ steps.meta.outputs.tags }}
+      version: ${{ steps.version.outputs.version }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Log in to GitHub Container Registry
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Generate version
+        id: version
+        run: |
+          VERSION=$(date +%Y%m%d-%H%M%S)-$(echo ${{ github.sha }} | cut -c1-7)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "date=$(date --iso-8601=seconds)" >> $GITHUB_OUTPUT
+      
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository }}/web
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ steps.version.outputs.version }}
+      
+      - name: Build and push web image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./clients/web
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            BUILDTIME=${{ steps.version.outputs.date }}
+            VERSION=${{ steps.version.outputs.version }}
+
   web-summary:
     name: Web Frontend Summary
     runs-on: ubuntu-latest
-    needs: [code-quality, test, accessibility]
+    needs: [code-quality, test, accessibility, build-docker-image]
     if: always()
     
     steps:
@@ -148,8 +206,18 @@ jobs:
           echo "**Code Quality**: ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
           echo "**Tests**: ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
           echo "**Accessibility**: ${{ needs.accessibility.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Docker Build**: ${{ needs.build-docker-image.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          if [[ "${{ needs.code-quality.result }}" == "success" && "${{ needs.test.result }}" == "success" ]]; then
+          if [[ "${{ needs.build-docker-image.outputs.image }}" != "" ]]; then
+            echo "**Docker Image**: ${{ needs.build-docker-image.outputs.image }}" >> $GITHUB_STEP_SUMMARY
+            if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+              echo "**Status**: ✅ Image pushed to registry" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "**Status**: 🔨 Image built (not pushed - not on main branch)" >> $GITHUB_STEP_SUMMARY
+            fi
+            echo "" >> $GITHUB_STEP_SUMMARY
+          fi
+          if [[ "${{ needs.code-quality.result }}" == "success" && "${{ needs.test.result }}" == "success" && "${{ needs.build-docker-image.result }}" == "success" ]]; then
             echo "✅ **Web frontend pipeline passed successfully!**" >> $GITHUB_STEP_SUMMARY
           else
             echo "❌ **Web frontend pipeline failed. Check individual jobs for details.**" >> $GITHUB_STEP_SUMMARY
