--- a/clients/app/pubspec.yaml
+++ b/clients/app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   auth0_flutter: ^1.7.2
+  connectivity_plus: ^6.0.5
   crypto: ^3.0.3
   cupertino_icons: ^1.0.8
   dio: ^5.4.0
@@ -53,6 +54,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   json_serializable: ^6.7.1
+  mockito: ^5.4.4
   mocktail: ^1.0.3
   riverpod_generator: ^2.3.9
   riverpod_lint: ^2.3.7
