--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,9 +19,12 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/lodash-es": "^4.17.12",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
     "konva": "^9.3.22",
+    "lodash-es": "^4.17.21",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
