--- a/clients/web/tsconfig.json
+++ b/clients/web/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "lib": ["dom", "dom.iterable", "ES2015", "ES2017"],
+    "target": "ES2021",
+    "lib": ["dom", "dom.iterable", "ES2015", "ES2017", "ES2021"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
