fix(ci): correct database migration script name in backend CI
- Changed 'db:migrate' to 'migrate' to match actual script in package.json
- Fixes backend CI pipeline failure on migration step

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -115,7 +115,7 @@ jobs:
         working-directory: backend
         env:
           DATABASE_URL: postgresql://postgres:test_password@localhost:5432/nexus_test
-        run: npm run db:migrate
+        run: npm run migrate
       
       - name: Run backend tests
         working-directory: backend
