fix: resolve TypeScript configuration and CI pipeline issues (NEX-127)
Resolves critical TypeScript configuration issues identified in PR review:

## Dependencies & Configuration
- Install missing TypeScript dependencies (@types/node, @types/jest)
- Update backend tsconfig.json to include proper type definitions
- Fix Jest test environment setup and type resolution

## Auth Interface Cleanup
- Remove email_verified field from ExtendedUserProfile interface
- Remove duplicate interface definitions between files
- Consolidate auth types in centralized @/types/auth module
- Fix imports to use proper type definitions

## Test Infrastructure Fixes
- Add missing authentication methods to test mocks
- Remove email_verified references from all test files
- Fix workspace store test spread type issues
- Update component test mocks with complete UseAuthReturn interface

## Verification
- Backend: TypeScript compilation passes (0 errors)
- Backend: All 512 tests pass successfully
- Frontend: TypeScript compilation passes (0 errors)
- Linting: No critical errors, only minor warnings

This resolves the CI/CD pipeline blocking issues and prepares the PR for merge.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -30,7 +30,8 @@
       "@/middleware/*": ["src/middleware/*"],
       "@/types/*": ["src/types/*"],
       "@/utils/*": ["src/utils/*"]
-    }
+    },
+    "types": ["node", "jest"]
   },
   "include": [
     "src/**/*"
