fix: resolve database connection issues in CI integration tests (NEX-127)
## Database Configuration Issues Fixed

**CI Migration Problem:**
- Migration step was failing with "password authentication failed for user 'nexus'"
- CI PostgreSQL service uses: user=postgres, password=test_password
- But migration was using development defaults: user=nexus, password=nexus_secure_2024

**Solutions Applied:**
1. **CI Configuration**: Add proper environment variables to migration step
   - Set NODE_ENV=test, POSTGRES_USER=postgres, POSTGRES_PASSWORD=test_password
   - Ensures migration uses correct credentials matching PostgreSQL service

2. **Knex Test Config**: Update test environment defaults in knexfile.js
   - Change default user from 'nexus' to 'postgres' for test environment
   - Change default password from 'nexus_secure_2024' to 'test_password'
   - Use POSTGRES_DB env var consistently

## Verification

This resolves the integration test failures by ensuring:
- Database migrations run with correct CI PostgreSQL credentials
- Test configuration matches CI service configuration
- Consistent environment variable usage across test configurations

The TypeScript fixes from previous commit remain intact.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -153,7 +153,11 @@ jobs:
       - name: Run database migrations
         working-directory: backend
         env:
-          DATABASE_URL: postgresql://postgres:test_password@localhost:5432/nexus_test
+          NODE_ENV: test
+          POSTGRES_DB: nexus_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_PORT: 5432
         run: npm run migrate
       
       - name: Run integration tests
