--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -180,6 +180,7 @@ jobs:
     name: Build Backend Docker Image
     runs-on: ubuntu-latest
     needs: [code-quality, unit-tests, integration-tests]
+    if: github.ref == 'refs/heads/main'
     outputs:
       image: ${{ steps.meta.outputs.tags }}
       version: ${{ steps.version.outputs.version }}
@@ -246,23 +247,31 @@ jobs:
           echo "**Code Quality**: ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
           echo "**Unit Tests**: ${{ needs.unit-tests.result }}" >> $GITHUB_STEP_SUMMARY
           echo "**Integration Tests**: ${{ needs.integration-tests.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Docker Build**: ${{ needs.build-docker-image.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          if [[ "${{ needs.build-docker-image.outputs.image }}" != "" ]]; then
-            echo "**Docker Image**: ${{ needs.build-docker-image.outputs.image }}" >> $GITHUB_STEP_SUMMARY
-            if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          
+          # Handle Docker build status
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "**Docker Build**: ${{ needs.build-docker-image.result }}" >> $GITHUB_STEP_SUMMARY
+            if [[ "${{ needs.build-docker-image.outputs.image }}" != "" ]]; then
+              echo "**Docker Image**: ${{ needs.build-docker-image.outputs.image }}" >> $GITHUB_STEP_SUMMARY
               echo "**Status**: ✅ Image pushed to registry" >> $GITHUB_STEP_SUMMARY
-            else
-              echo "**Status**: 🔨 Image built (not pushed - not on main branch)" >> $GITHUB_STEP_SUMMARY
             fi
-            echo "" >> $GITHUB_STEP_SUMMARY
-          fi
-          if [[ "${{ needs.code-quality.result }}" == "success" && "${{ needs.unit-tests.result }}" == "success" && "${{ needs.integration-tests.result }}" == "success" && "${{ needs.build-docker-image.result }}" == "success" ]]; then
-            echo "✅ **Backend pipeline passed successfully!**" >> $GITHUB_STEP_SUMMARY
           else
-            echo "❌ **Backend pipeline failed. Check individual jobs for details.**" >> $GITHUB_STEP_SUMMARY
-            echo "- **Code Quality**: ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
-            echo "- **Unit Tests**: ${{ needs.unit-tests.result }}" >> $GITHUB_STEP_SUMMARY
-            echo "- **Integration Tests**: ${{ needs.integration-tests.result }}" >> $GITHUB_STEP_SUMMARY
-            echo "- **Docker Build**: ${{ needs.build-docker-image.result }}" >> $GITHUB_STEP_SUMMARY
+            echo "**Docker Build**: ⏭️ Skipped (PR build - Docker only builds on main)" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          # Determine overall success (Docker build success only required on main branch)
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            if [[ "${{ needs.code-quality.result }}" == "success" && "${{ needs.unit-tests.result }}" == "success" && "${{ needs.integration-tests.result }}" == "success" && "${{ needs.build-docker-image.result }}" == "success" ]]; then
+              echo "✅ **Backend pipeline passed successfully!**" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "❌ **Backend pipeline failed. Check individual jobs for details.**" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            if [[ "${{ needs.code-quality.result }}" == "success" && "${{ needs.unit-tests.result }}" == "success" && "${{ needs.integration-tests.result }}" == "success" ]]; then
+              echo "✅ **Backend pipeline passed successfully!**" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "❌ **Backend pipeline failed. Check individual jobs for details.**" >> $GITHUB_STEP_SUMMARY
+            fi
           fi
