--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -174,7 +174,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=sha-
             type=raw,value=latest,enable={{is_default_branch}}
             type=raw,value=${{ steps.version.outputs.version }}
       
