feat: implement comprehensive multi-canvas workspace integration (NEX-127) (#33)
* feat: implement database schema for multi-canvas support (NEX-172)

- Add canvases table with workspace relationships
- Migrate cards from workspace_id to canvas_id structure
- Update canvas settings to support per-canvas configuration
- Include comprehensive data migration with default canvas creation
- Maintain backward compatibility and add proper constraints
- Add performance indexes and foreign key relationships

Technical changes:
- 011_create_canvases_table.ts: Core canvas entity with business rules
- 012_add_canvas_id_to_cards.ts: Card-canvas relationship migration
- 013_update_canvas_settings.ts: Settings table restructure

All migrations tested with rollback functionality.

* feat: implement Canvas service layer with comprehensive CRUD operations (NEX-173)

- Add Canvas TypeScript interfaces and Zod validation schemas
- Implement CanvasService with all required CRUD operations
- Add default canvas management and authorization methods
- Include canvas duplication and statistics functionality
- Write comprehensive unit tests with 87.9% coverage
- Follow existing service patterns and error handling

Technical changes:
- types/canvas.ts: Core interfaces and validation schemas
- services/canvas.ts: Complete service implementation
- __tests__/unit/services/canvas.test.ts: 42 test cases covering all functionality

Business rules implemented:
- One default canvas per workspace constraint
- Canvas name uniqueness within workspace
- Workspace-based authorization integration
- Default canvas deletion protection

* feat: implement Canvas GraphQL schema and resolvers with comprehensive API (NEX-174)

- Add Canvas GraphQL schema with complete type system and subscriptions
- Implement all Canvas resolvers (queries, mutations, subscriptions, field resolvers)
- Add canvas-scoped card and connection query support
- Integrate Canvas service with GraphQL layer and authorization
- Add real-time 

--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,9 +19,12 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@types/lodash-es": "^4.17.12",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
     "konva": "^9.3.22",
+    "lodash-es": "^4.17.21",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,10 +36,10 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
