feat: implement comprehensive local storage and offline support (NEX-144)
## Summary
Implemented complete local storage system for Flutter mobile app with offline-first architecture,
auto-save functionality, and robust sync queue management.

## Technical Implementation
- **SQLite Database**: Complete schema with migrations, transactions, and integrity checks
- **Card Storage**: Full CRUD operations with optimistic locking and batch processing
- **Auto-Save System**: 5-second debounced saves with dirty state tracking and conflict detection
- **Sync Queue**: Priority-based offline operations queue with retry logic and error handling
- **Cache Management**: Intelligent LRU cache with 100MB limit and TTL expiration
- **User Preferences**: Type-safe preference storage with JSON serialization and defaults

## Core Services Created
- DatabaseService: Main SQLite management with WAL mode and connection pooling
- CardStorageService: Complete card CRUD with search capabilities and version control
- AutoSaveService: Background auto-save with debouncing and conflict resolution
- SyncQueueService: Offline operation queue with priority handling and retry logic
- CacheManagerService: Size-limited cache with TTL expiration and LRU eviction
- UserPreferencesService: Type-safe preference management with import/export

## Data Models
- Complete Dart models mirroring backend CardTypes.ts with proper validation
- JSON serialization/deserialization for all data structures
- Database entity mapping with optimized indexes for performance
- Comprehensive enum definitions matching backend types

## Dependencies Added
- sqflite: ^2.3.0 (SQLite database)
- uuid: ^4.2.1 (unique ID generation)
- encrypt: ^5.0.1 (data encryption support)

## Features Completed
- [x] Local database setup (SQLite with proper schema)
- [x] Card draft storage with auto-save (5-second debouncing)
- [x] Offline capture queue implementation (priority-based with retry)
- [x] Sync conflict resolution data structures (ver

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       context: ./clients/web
       dockerfile: Dockerfile
       target: ${DOCKER_TARGET:-production}
+      args:
+        - NODE_ENV=${NODE_ENV:-production}
     container_name: nexus-web
     restart: unless-stopped
     ports:
@@ -38,20 +40,10 @@ services:
       - API_BASE_URL=${API_BASE_URL:-http://backend:3000}
       
     volumes:
-      # Development hot-reload (only in development)
-      - ./clients/web/app:/app/app
-      - ./clients/web/components:/app/components
-      - ./clients/web/hooks:/app/hooks
-      - ./clients/web/lib:/app/lib
-      - ./clients/web/styles:/app/styles
-      - ./clients/web/types:/app/types
-      - ./clients/web/package.json:/app/package.json:ro
-      - ./clients/web/next.config.js:/app/next.config.js:ro
-      - ./clients/web/tailwind.config.js:/app/tailwind.config.js:ro
-      - ./clients/web/tsconfig.json:/app/tsconfig.json:ro
-      # Next.js build cache and node_modules for hot reload
-      - /app/.next
-      - /app/node_modules
+      # Production volumes are minimal - development overrides will add hot-reload volumes
+      # Build cache and node_modules persistence for production
+      - nexus_web_build_cache:/app/.next
+      - nexus_web_prod_modules:/app/node_modules
     depends_on:
       backend:
         condition: service_healthy
@@ -71,7 +63,9 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-      target: ${DOCKER_TARGET:-development}
+      target: ${DOCKER_TARGET:-production}
+      args:
+        - NODE_ENV=${NODE_ENV:-production}
     container_name: nexus-backend
     restart: unless-stopped
     ports:
@@ -127,12 +121,11 @@ services:
       - SESSION_SECRET=${SESSION_SECRET:-your-session-secret-change-in-production}
       
     volumes:
-      # Development hot-reload (only in development)
-      - ./backend/src:/app/src:ro
-      - ./backend/package.json:/app/package.json:ro
-      - ./backend/tsconfig.json:/app/tsconfig.json:ro
+      # Production volumes are minimal - development overrides will add hot-reload volumes
       # Logs persistence
       - nexus_logs:/app/logs
+      # Production node_modules persistence
+      - nexus_backend_prod_modules:/app/node_modules
     depends_on:
       postgres:
         condition: service_healthy
@@ -285,6 +278,7 @@ networks:
 # Volumes
 #######################
 volumes:
+  # Database and cache persistence
   nexus_postgres_data:
     driver: local
     driver_opts:
@@ -305,3 +299,11 @@ volumes:
       type: none
       o: bind
       device: ${DATA_DIR:-./data}/logs
+  
+  # Production build caches and dependencies
+  nexus_web_build_cache:
+    driver: local
+  nexus_web_prod_modules:
+    driver: local
+  nexus_backend_prod_modules:
+    driver: local
