--- a/clients/app/pubspec.yaml
+++ b/clients/app/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   path_provider: ^2.1.2
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.2
+  # Local storage dependencies
+  sqflite: ^2.3.2
+  uuid: ^4.4.2
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
