--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,18 +4,54 @@
 version: '3.8'
 
 services:
+  web:
+    build:
+      target: development  # Use development stage
+    environment:
+      - NODE_ENV=development
+      - NEXT_TELEMETRY_DISABLED=1
+      # Enable polling for file watching in Docker
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_INTERVAL=1000
+    volumes:
+      # Hot reload source code - read/write access
+      - ./clients/web/app:/app/app
+      - ./clients/web/components:/app/components
+      - ./clients/web/hooks:/app/hooks
+      - ./clients/web/lib:/app/lib
+      - ./clients/web/styles:/app/styles
+      - ./clients/web/types:/app/types
+      - ./clients/web/public:/app/public
+      # Configuration files
+      - ./clients/web/package.json:/app/package.json
+      - ./clients/web/next.config.js:/app/next.config.js
+      - ./clients/web/tailwind.config.js:/app/tailwind.config.js
+      - ./clients/web/tsconfig.json:/app/tsconfig.json
+      - ./clients/web/postcss.config.js:/app/postcss.config.js
+      # Named volumes for dependencies and build cache
+      - web_node_modules:/app/node_modules
+      - web_next_cache:/app/.next
+    command: npm run dev
+
   backend:
     build:
       target: development  # Use development stage for development
     environment:
       - NODE_ENV=development
       - LOG_LEVEL=debug
+      # Enable polling for nodemon in Docker
+      - CHOKIDAR_USEPOLLING=true
+      - CHOKIDAR_INTERVAL=1000
     volumes:
-      # Enable hot reloading in development
-      - ./backend/src:/app/src:ro
-      - ./backend/package.json:/app/package.json:ro
-      - ./backend/tsconfig.json:/app/tsconfig.json:ro
-      - ./backend/nodemon.json:/app/nodemon.json:ro
+      # Hot reload source code - read/write access (removed :ro)
+      - ./backend/src:/app/src
+      - ./backend/package.json:/app/package.json
+      - ./backend/tsconfig.json:/app/tsconfig.json
+      - ./backend/nodemon.json:/app/nodemon.json
+      # Named volume for dependencies
+      - backend_node_modules:/app/node_modules
+    command: npm run dev
     
   postgres:
     ports:
@@ -24,3 +60,9 @@ services:
   redis:
     ports:
       - "6379:6379"  # Expose redis port for development tools
+
+# Named volumes for better performance
+volumes:
+  web_node_modules:
+  web_next_cache:
+  backend_node_modules:
