--- a/clients/app/pubspec.yaml
+++ b/clients/app/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
   mocktail: ^1.0.3
   riverpod_generator: ^2.3.9
   riverpod_lint: ^2.3.7
+  sqflite_common_ffi: ^2.3.0+4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
