🔧 chore: update dependencies and TypeScript configuration
- Fix Next.js and eslint-config-next version alignment (^14.2.32)
- Add explicit @/contexts/* path mapping to tsconfig.json for better module resolution
- Update package-lock.json with resolved dependency versions
- Ensure TypeScript compilation compatibility across all new permission features

These configuration updates resolve module resolution issues and ensure
consistent build behavior across development and production environments.

--- a/clients/web/tsconfig.json
+++ b/clients/web/tsconfig.json
@@ -24,6 +24,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/components/*": ["./components/*"],
+      "@/contexts/*": ["./contexts/*"],
       "@/lib/*": ["./lib/*"],
       "@/hooks/*": ["./hooks/*"],
       "@/types/*": ["./types/*"],
