--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -25,6 +25,7 @@
     "graphql": "^16.8.1",
     "konva": "^9.3.22",
     "lodash-es": "^4.17.21",
+    "lz-string": "^1.5.0",
     "next": "^14.2.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
