feat: implement comprehensive devcontainer setup with auto-migrations
- Complete GitHub Codespaces devcontainer configuration
- Node.js 22, PostgreSQL 15, Redis 7 with auto-orchestration
- Root package.json with monorepo development scripts
- Automatic database migrations on backend startup
- Fixed environment variable loading for Next.js
- Proper localhost endpoints for development
- Auth0 configuration loading across services
- Centralized .env management

Resolves devcontainer setup requirements and establishes reliable development environment.

--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -4,7 +4,7 @@
   "description": "Project Nexus Web Client - Next.js 14 with Auth0 Authentication",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p $WEB_PORT",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.0.18",
     "@types/lodash-es": "^4.17.12",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
     "konva": "^9.3.22",
